--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ body {
   overflow: hidden;
   margin: 0;
   display: flex;
-  font-family: "Segoe UI", serif;
+  font-family: "Calibri", serif;
   flex-direction: column;
 }
 
 header {
-  background-color: #eee;
+  background-color: #AAFFAA;
   height: 150px;
   color: #222;
   font-weight: 900;
@@ -79,7 +79,7 @@ nav {
   width: 120px;
   padding: 7px;
   border-radius: 100px;
-  border: 2px solid #c1c1c1; 
+  border: 3px solid #11EE11;
   padding-right: 30px;
   padding-left: 15px;
   margin-left: auto;
@@ -102,7 +102,7 @@ nav {
 
 .left-menu .group:after {
   font-weight: 500;
-  color: #8e8e8e;
+  color: #008000;/**#8e8e8e;**/
   position: absolute;
   width: 20px;
   top: 11px;
@@ -167,12 +167,12 @@ nav {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 15px;
-  color: #222;
+  color: #008000;
   transition: all .2s;
 }
 
 .left-menu .group button:hover {
-  background: #c1c1c1;
+  background: #AAFFAA;
 }
 
 .left-menu .group button:active {
