--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ nav {
 
 .left-menu .group_time input {
     font-family: 'Niconne', cursive;
+    font-size: 25px;
     background-color: limegreen;
     font-weight: 900;
     position: absolute;
